--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,9 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-	        <sonar.host.url>http://35.175.177.11:9980/</sonar.host.url>
-                <sonar.login>squ_8c8b137f9d47f9e791bca126114b2b4d45fd8eb4</sonar.login>
-                <!--
-                  <sonar.login>admin</sonar.login>
-		<sonar.password>kumar007</sonar.password>
-                -->
+		<!-- <sonar.host.url>http://13.232.5.182:9000/</sonar.host.url>
+		<sonar.login>admin</sonar.login>
+		<sonar.password>admin</sonar.password> -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -39,7 +36,8 @@
 			<artifactId>json</artifactId>
 			<version>20160212</version>
 		</dependency>
-		 <!--test dependencies --> 
+		
+		<!-- test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
